Fix zones not being behind popup glass.

--- a/src/uk/ac/nott/mrl/homework/client/device.css
+++ b/src/uk/ac/nott/mrl/homework/client/device.css
@@ -90,6 +90,7 @@ body
 
 .glass {
 	background-color: rgba(0,0,0,0.5);
+	z-index: 100;
 }
 
 .dragDevice {
